[tool.poetry]
name = "aioworkers-pg"
version = "0.0.0"
description = "Module for working with PostgreSQL via asyncpg"
authors = [
    "Alexander Bogushov <abogushov@gmail.com>",
    "Alexander Malev <aamalev@gmail.com>",
]
license = "Apache Software License 2.0"
readme = "README.md"
homepage = "https://github.com/aioworkers/aioworkers-pg"
repository = "https://github.com/aioworkers/aioworkers-pg"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

packages = [
     { include = "aioworkers_pg" },
]

[tool.poetry.dependencies]
python = "^3.6"
aioworkers = ">=0.15"
asyncpg = "<=0.21.0"
asyncpgsa = "<0.27.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-aioworkers = "*"
pytest-black = "*"
black = "20.8b1"
pytest-flake8 = "*"
flake8 = "*"
pyyaml = "*"
pytest-mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
# The pattern for git tag in pep440 format. It is the same as default but without the v prefix.
pattern = "(?x)^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry-dynamic-versioning.substitution]
enable = true

[tool.pytest.ini_options]
addopts = "--flake8 --doctest-modules --black --mypy --mypy-ignore-missing-imports"
testpaths = ["aioworkers_pg", "tests"]
flake8-max-complexity = 10
flake8-max-line-length = 99
