[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioworkers-pg"
dynamic = ["version"]
description = "Module for working with PostgreSQL via asyncpg"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Alexander Bogushov", email = "abogushov@gmail.com" },
    { name = "Alexander Malev", email = "aamalev@gmail.com" },
]
keywords = [
    "aioworkers",
    "postgresql",
    "postgres",
    "pg",
    "asyncpg",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aioworkers>=0.15",
    "asyncpg>=0.22",
]
[project.optional-dependencies]
sa = [
    "SQLAlchemy[asyncio]>2",
]
dev-test = [
    "aioworkers==0.26",
    "SQLAlchemy[asyncio]==2.0.19",
    "asyncpg==0.28.0",
    "asyncpgsa==0.27.1",
    "coverage[toml]==7.2.7",
    "pytest==7.4.0",
    "pytest-aioworkers[asyncio]==0.4",
    "pytest-mock==3.11.1",
    "pytest-timeout",
    "pyyaml==6.0.1",
]
dev-lint = [
    "ruff==0.0.282",
    "isort==5.12.0",
    "black==23.7.0",
    "mypy==1.4.1",
]

[project.entry-points."aioworkers.storage"]
pg_ro = "aioworkers_pg.storage:RoStorage"

[project.urls]
Homepage = "https://github.com/aioworkers/aioworkers-pg"
Documentation = "https://github.com/aioworkers/aioworkers-pg#readme"
Issues = "https://github.com/aioworkers/aioworkers-pg/issues"
Source = "https://github.com/aioworkers/aioworkers-pg"

[tool.hatch.version]
path = "aioworkers_pg/__init__.py"

[tool.hatch.build]
include = [
    "/aioworkers_pg",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
]
[tool.hatch.envs.default.scripts]
cov = [
    "coverage run -m pytest",
    "coverage report",
]

[[tool.hatch.envs.all.matrix]]
python = [
    "3.7",
    "3.8",
    "3.9",
    "3.10",
    "3.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 25
testpaths = [
    "aioworkers_pg",
    "tests",
]
addopts = [
    "--doctest-modules",
]

[tool.coverage.run]
branch = true
parallel = false
source = [
    "aioworkers_pg",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = false
include_trailing_comma = true

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.hatch.envs.lint]
python = "3.8"
features = [
    "dev-lint",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:aioworkers_pg tests}"
style = [
    "ruff {args:aioworkers_pg tests}",
    "isort --check-only --diff {args:aioworkers_pg tests}",
    "black --check --diff {args:aioworkers_pg tests}",
]
fmt = [
    "ruff --fix {args:aioworkers_pg tests}",
    "isort {args:aioworkers_pg tests}",
    "black {args:aioworkers_pg tests}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.template]
detached = true
dependencies = [
    "scaraplate",
]
[tool.hatch.envs.template.scripts]
update = [
    "scaraplate rollup --no-input {args:../cookiecutter-aioworkers-plugin} ."
]
clone = [
    "git clone https://github.com/aioworkers/cookiecutter-aioworkers-plugin {args:../cookiecutter-aioworkers-plugin}"
]
